Fixing issue where the index selection control is too wide
Reference #2134

--- a/src/appserver/static/css/NetworkToolsSetupView.css
+++ b/src/appserver/static/css/NetworkToolsSetupView.css
@@ -1,3 +1,7 @@
 #inputIndexes > .splunk-choice-input{
     margin-left: 0px; /* Make the input align with the other controls */
 }
+
+#inputIndexes{
+    width: 300px;
+}
